kubernetes/apps/database/pgadmin/app/httproute.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app pgadmin
  namespace: &namespace database
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: pgAdmin
    gethomepage.dev/group: Services
    gethomepage.dev/icon: pgadmin.svg
    gethomepage.dev/description: Postgres admin · LAN only
    kustomize.toolkit.fluxcd.io/substitute: "true"
spec:
  hostnames: ["pgadmin.${SECRET_DOMAIN}"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: *app
          namespace: *namespace
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
